--- a/chrysler.html
+++ b/chrysler.html
@@ -85,7 +85,7 @@
 </head>
 <body>
     <header>
-        <img src="root/images/chrysler-logo.png" alt="Chrysler Logo" style="height:60px; margin-bottom:0.5rem;">
+        <img src="root/images/mopar/chrysler-logo.png" alt="Chrysler Logo" style="height:60px; margin-bottom:0.5rem;">
         <h1>Chrysler Cars</h1>
     </header>
     <main>
@@ -93,61 +93,61 @@
         <div id="cars">
             <a href="chrysler-300.html" class="car-tile">
                 <button>
-                    <img src="root/images/chrysler-300.png" alt="Chrysler 300">
+                    <img src="root/images/mopar/chrysler-300.png" alt="Chrysler 300">
                     <span>Chrysler 300</span>
                 </button>
             </a>
             <a href="chrysler-pacifica.html" class="car-tile">
                 <button>
-                    <img src="root/images/pacifica.png" alt="Chrysler Pacifica">
+                    <img src="root/images/mopar/pacifica.png" alt="Chrysler Pacifica">
                     <span>Chrysler Pacifica</span>
                 </button>
             </a>
             <a href="chrysler-voyager.html" class="car-tile">
                 <button>
-                    <img src="root/images/voyager.png" alt="Chrysler Voyager">
+                    <img src="root/images/mopar/voyager.png" alt="Chrysler Voyager">
                     <span>Chrysler Voyager</span>
                 </button>
             </a>
             <a href="chrysler-aspen.html" class="car-tile">
                 <button>
-                    <img src="root/images/aspen.png" alt="Chrysler Aspen">
+                    <img src="root/images/mopar/aspen.png" alt="Chrysler Aspen">
                     <span>Chrysler Aspen</span>
                 </button>
             </a>
             <a href="chrysler-ptcruiser.html" class="car-tile">
                 <button>
-                    <img src="root/images/ptcruiser.png" alt="Chrysler PT Cruiser">
+                    <img src="root/images/mopar/ptcruiser.png" alt="Chrysler PT Cruiser">
                     <span>Chrysler PT Cruiser</span>
                 </button>
             </a>
             <a href="chrysler-sebring.html" class="car-tile">
                 <button>
-                    <img src="root/images/sebring.png" alt="Chrysler Sebring">
+                    <img src="root/images/mopar/sebring.png" alt="Chrysler Sebring">
                     <span>Chrysler Sebring</span>
                 </button>
             </a>
             <a href="chrysler-crossfire.html" class="car-tile">
                 <button>
-                    <img src="root/images/crossfire.png" alt="Chrysler Crossfire">
+                    <img src="root/images/mopar/crossfire.png" alt="Chrysler Crossfire">
                     <span>Chrysler Crossfire</span>
                 </button>
             </a>
             <a href="chrysler-concorde.html" class="car-tile">
                 <button>
-                    <img src="root/images/concorde.png" alt="Chrysler Concorde">
+                    <img src="root/images/mopar/concorde.png" alt="Chrysler Concorde">
                     <span>Chrysler Concorde</span>
                 </button>
             </a>
             <a href="chrysler-lhs.html" class="car-tile">
                 <button>
-                    <img src="root/images/lhs.png" alt="Chrysler LHS">
+                    <img src="root/images/mopar/lhs.png" alt="Chrysler LHS">
                     <span>Chrysler LHS</span>
                 </button>
             </a>
             <a href="chrysler-newyorker.html" class="car-tile">
                 <button>
-                    <img src="root/images/newyorker.png" alt="Chrysler New Yorker">
+                    <img src="root/images/mopar/newyorker.png" alt="Chrysler New Yorker">
                     <span>Chrysler New Yorker</span>
                 </button>
             </a>
