--- a/toyota-corolla.html
+++ b/toyota-corolla.html
@@ -86,16 +86,27 @@
         .back-button:hover {
             background-color: #0056b3;
         }
+
+        .brand-link {
+            display: inline-block;
+            margin-top: 0.5rem;
+            color: #007bff;
+            text-decoration: underline;
+            font-size: 1rem;
+        }
     </style>
 </head>
 <body>
     <header>
         <h1>Toyota Corolla</h1>
+        <a href="toyota.html" class="brand-link">
+            ← Toyota Brand Page
+        </a>
     </header>
     <main>
         <a class="back-button" onclick="history.back()">← Back</a>
         <section>
-            <img src="root/images/corolla.png" alt="Toyota Corolla" style="width: 100%; border-radius: 8px; margin-bottom: 0.5rem;">
+            <img src="root/images/toyota/corolla.png" alt="Toyota Corolla" style="width: 100%; border-radius: 8px; margin-bottom: 0.5rem;">
             <p>The Toyota Corolla is a compact car known for its reliability and fuel efficiency.</p>
         </section>
         <section>
