--- a/bugatti-tourbillon.html
+++ b/bugatti-tourbillon.html
@@ -95,7 +95,7 @@
     <main>
         <a class="back-button" onclick="history.back()">← Back</a>
         <section>
-            <img src="root/images/tourbillon.png" alt="Bugatti Tourbillon" style="width: 100%; border-radius: 8px; margin-bottom: 0.5rem;">
+            <img src="root/images/bugatti/tourbillion.png" alt="Bugatti Tourbillon" style="width: 100%; border-radius: 8px; margin-bottom: 0.5rem;">
             <p>The Bugatti Tourbillon is a masterpiece of engineering and design, combining luxury and performance in a unique way.</p>
         </section>
         <section>
