--- a/bmw-x5.html
+++ b/bmw-x5.html
@@ -86,16 +86,27 @@
         .back-button:hover {
             background-color: #0056b3;
         }
+
+        .brand-link {
+            display: inline-block;
+            margin-top: 0.5rem;
+            color: #007bff;
+            text-decoration: underline;
+            font-size: 1rem;
+        }
     </style>
 </head>
 <body>
     <header>
         <h1>BMW X5</h1>
+        <a href="bmw.html" class="brand-link">
+            BMW Brand Page
+        </a>
     </header>
     <main>
         <a class="back-button" onclick="history.back()">← Back</a>
         <section>
-            <img src="root/images/bmw-x5.png" alt="BMW X5" style="width: 100%; border-radius: 8px; margin-bottom: 0.5rem;">
+            <img src="root/images/bmw/bmw-x5.png" alt="BMW X5" style="width: 100%; border-radius: 8px; margin-bottom: 0.5rem;">
             <p>The BMW X5 is a luxury midsize SUV offering a blend of performance, comfort, and advanced technology.</p>
         </section>
         <section>
