--- a/ford-mustang.html
+++ b/ford-mustang.html
@@ -98,7 +98,7 @@
     <main>
         <a class="back-button" onclick="history.back()">← Back</a>
         <section>
-            <img src="root/images/mustang.png" alt="Ford Mustang" style="width: 100%; border-radius: 8px; margin-bottom: 0.5rem;">
+            <img src="root/images/ford/mustang.png" alt="Ford Mustang" style="width: 100%; border-radius: 8px; margin-bottom: 0.5rem;">
             <p>The Ford Mustang is an iconic sports car known for its performance, style, and heritage.</p>
         </section>
         <section>
