--- a/honda-civic.html
+++ b/honda-civic.html
@@ -86,11 +86,22 @@
         .back-button:hover {
             background-color: #0056b3;
         }
+
+        .brand-link {
+            display: inline-block;
+            margin-top: 0.5rem;
+            color: #007bff;
+            text-decoration: underline;
+            font-size: 1rem;
+        }
     </style>
 </head>
 <body>
     <header>
         <h1>Honda Civic</h1>
+        <a href="honda.html" class="brand-link">
+            ← Back to Honda Brand Page
+        </a>
     </header>
     <main>
         <a class="back-button" onclick="history.back()">← Back</a>
